[tool.poetry]
name = "pystable"
version = "0.1.0"
description = ""
authors = ["mikeyrf <mikeyrf@users.noreply.github.com>"]
license = "GPL-3.0-only"
readme = "README.md"

packages = [{include = "pystable"}]
include = [
  {path = "pystable/_extensions/*.so", format = "wheel"},
  {path = "pystable/_extensions/*.pyd", format = "wheel"}
]

[tool.poetry.dependencies]
python = "^3.9.5"
pandas = "^1.3.0"
setuptools = "^57.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
hypothesis = "^6.14.1"
flake8 = "^3.9.2"
numpy = "^1.21.0"
pandas = "^1.3.0"
pytest-benchmark = "^3.4.1"

[tool.poetry.build]
script = "build.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
