[tool.poetry]
name = "pystable"
version = "0.2.3"
description = "Python wrapper for the libstable C library"
authors = [
  "RJ Rybarczyk <rj@rybar.tech>",
  "Michael Feldman <23126274+mikeyrf@users.noreply.github.com>"
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/overlay-market/pystable"
keywords = ['alpha stable', 'distribution', 'statistics', 'probability']

packages = [{include = "pystable"}]
include = [
  {path = "pystable/_extensions/*.so", format = "wheel"},
  {path = "pystable/_extensions/*.pyd", format = "wheel"}
]

[tool.poetry.dependencies]
python = "^3.9.5"
setuptools = "^57.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
hypothesis = "^6.14.1"
flake8 = "^3.9.2"
numpy = "^1.21.0"
pandas = "^1.3.0"
coverage = {version = "^5.5", extras = ["toml"]}
nox = "^2021.6.12"
coverage-badge = "^1.0.1"

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "*/tests*"]

[tool.coverage.report]
fail_under = 89

[build-system]
requires = [
  "poetry-core>=1.0.0",
  "setuptools>=57.0.0,<59.0.0",
  "wheel"
]
build-backend = "poetry.core.masonry.api"
